--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"build": "npm install",
+    "build": "npm install",
     "start": "node src/server"
   },
   "author": "6times",
   "license": "ISC",
   "dependencies": {
     "localtunnel": "^2.0.2",
-    "mongodb": "^4.3.0"
+    "mongodb": "^4.3.0",
+    "prettier": "^2.5.1"
   }
 }
