--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "localtunnel": "^2.0.2",
     "mongodb": "^4.3.0",
+    "package.json": "^2.0.1",
     "prettier": "^2.5.1"
   }
 }
