--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "6times & mugman",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.2",
     "localtunnel": "^2.0.2",
     "mongodb": "^4.3.0",
     "package.json": "^2.0.1",
